# omi-cpp-parquet-wide

./: .gitignore  CMakeLists.txt  ReadMe.md
cme/: CMakeLists.txt  main.cpp
cme/conversion/: Manager.hpp
cme/json/: Writer.hpp
cme/packet/: Parser.hpp  Result.hpp
cme/parquet/: Batch.hpp  Record.hpp  Writer.hpp
cme/parquet/fields/: AggressorSide.hpp  ApplId.hpp  Asset.hpp  BlockLength.hpp  CfiCode.hpp  ChannelResetGroup.hpp  ClearedVolume.hpp  ContractMultiplier.hpp  ContractMultiplierUnit.hpp  Currency.hpp  CurrentChunk.hpp  Day.hpp  DecayQuantity.hpp  DecayStartDate.hpp  DisplayFactor.hpp  EventTime.hpp  EventType.hpp  FlowScheduleType.hpp  HaltReason.hpp  HeartBtInt.hpp  HighLimitPrice.hpp  IncrementalRefreshVolumeGroup.hpp  LastMsgSeqNumProcessed.hpp  LastQty.hpp  LastUpdateTime.hpp  LegOptionDelta.hpp  LegPrice.hpp  LegRatioQty.hpp  LegSecurityId.hpp  LegSide.hpp  LotType.hpp  LowLimitPrice.hpp  MDIncrementalRefreshBook32NoMDEntriesGroup.hpp  MDIncrementalRefreshBook32NoOrderIDEntriesGroup.hpp  MDIncrementalRefreshDailyStatistics33NoMDEntriesGroup.hpp  MDIncrementalRefreshLimitsBanding34NoMDEntriesGroup.hpp  MDIncrementalRefreshOrderBook43NoMDEntriesGroup.hpp  MDIncrementalRefreshSessionStatistics35NoMDEntriesGroup.hpp  MDIncrementalRefreshTrade36NoMDEntriesGroup.hpp  MDIncrementalRefreshTradeSummary42NoMDEntriesGroup.hpp  (+103 more)
cme/program/: Args.hpp  Runner.hpp
cme/protocol/: definitions.hpp
cme/protocol/bitfields/: InstAttribValue.hpp  MatchEventIndicator.hpp  SettlPriceType.hpp
cme/protocol/groups/: ChannelResetGroup.hpp  IncrementalRefreshVolumeGroup.hpp  MDIncrementalRefreshBook32NoMDEntriesGroup.hpp  MDIncrementalRefreshBook32NoOrderIDEntriesGroup.hpp  MDIncrementalRefreshDailyStatistics33NoMDEntriesGroup.hpp  MDIncrementalRefreshLimitsBanding34NoMDEntriesGroup.hpp  MDIncrementalRefreshOrderBook43NoMDEntriesGroup.hpp  MDIncrementalRefreshSessionStatistics35NoMDEntriesGroup.hpp  MDIncrementalRefreshTrade36NoMDEntriesGroup.hpp  MDIncrementalRefreshTradeSummary42NoMDEntriesGroup.hpp  MDIncrementalRefreshTradeSummary42NoOrderIDEntriesGroup.hpp  MDInstrumentDefinitionFuture27NoEventsGroup.hpp  MDInstrumentDefinitionFuture27NoInstAttribGroup.hpp  MDInstrumentDefinitionFuture27NoLotTypeRulesGroup.hpp  MDInstrumentDefinitionFuture27NoMDFeedTypesGroup.hpp  MDInstrumentDefinitionOption41NoEventsGroup.hpp  MDInstrumentDefinitionOption41NoInstAttribGroup.hpp  MDInstrumentDefinitionOption41NoLotTypeRulesGroup.hpp  MDInstrumentDefinitionOption41NoMDFeedTypesGroup.hpp  MDInstrumentDefinitionOption41NoRelatedInstrumentsGroup.hpp  MDInstrumentDefinitionOption41NoUnderlyingsGroup.hpp  MDInstrumentDefinitionSpread29NoEventsGroup.hpp  MDInstrumentDefinitionSpread29NoInstAttribGroup.hpp  MDInstrumentDefinitionSpread29NoLegsGroup.hpp  MDInstrumentDefinitionSpread29NoLotTypeRulesGroup.hpp  MDInstrumentDefinitionSpread29NoMDFeedTypesGroup.hpp  RelatedSymGroup.hpp  SnapshotFullRefresh38NoMDEntriesGroup.hpp  SnapshotFullRefreshOrderBook44NoMDEntriesGroup.hpp
cme/protocol/iterators/: ChannelResetGroupIterator.hpp  IncrementalRefreshVolumeGroupIterator.hpp  MDIncrementalRefreshBook32NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshBook32NoOrderIDEntriesGroupIterator.hpp  MDIncrementalRefreshDailyStatistics33NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshLimitsBanding34NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshOrderBook43NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshSessionStatistics35NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshTrade36NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshTradeSummary42NoMDEntriesGroupIterator.hpp  MDIncrementalRefreshTradeSummary42NoOrderIDEntriesGroupIterator.hpp  MDInstrumentDefinitionFuture27NoEventsGroupIterator.hpp  MDInstrumentDefinitionFuture27NoInstAttribGroupIterator.hpp  MDInstrumentDefinitionFuture27NoLotTypeRulesGroupIterator.hpp  MDInstrumentDefinitionFuture27NoMDFeedTypesGroupIterator.hpp  MDInstrumentDefinitionOption41NoEventsGroupIterator.hpp  MDInstrumentDefinitionOption41NoInstAttribGroupIterator.hpp  MDInstrumentDefinitionOption41NoLotTypeRulesGroupIterator.hpp  MDInstrumentDefinitionOption41NoMDFeedTypesGroupIterator.hpp  MDInstrumentDefinitionOption41NoRelatedInstrumentsGroupIterator.hpp  MDInstrumentDefinitionOption41NoUnderlyingsGroupIterator.hpp  MDInstrumentDefinitionSpread29NoEventsGroupIterator.hpp  MDInstrumentDefinitionSpread29NoInstAttribGroupIterator.hpp  MDInstrumentDefinitionSpread29NoLegsGroupIterator.hpp  MDInstrumentDefinitionSpread29NoLotTypeRulesGroupIterator.hpp  MDInstrumentDefinitionSpread29NoMDFeedTypesGroupIterator.hpp  MessageIterator.hpp  RelatedSymGroupIterator.hpp  SnapshotFullRefresh38NoMDEntriesGroupIterator.hpp  SnapshotFullRefreshOrderBook44NoMDEntriesGroupIterator.hpp
cme/protocol/messages/: AdminLogin.hpp  AdminLogout.hpp  ChannelReset.hpp  MdIncrementalRefreshBook.hpp  MdIncrementalRefreshDailyStatistics.hpp  MdIncrementalRefreshLimitsBanding.hpp  MdIncrementalRefreshOrderBook.hpp  MdIncrementalRefreshSessionStatistics.hpp  MdIncrementalRefreshTrade.hpp  MdIncrementalRefreshTradeSummary.hpp  MdIncrementalRefreshVolume.hpp  MdInstrumentDefinitionFuture.hpp  MdInstrumentDefinitionOption.hpp  MdInstrumentDefinitionSpread.hpp  QuoteRequest.hpp  SecurityStatus.hpp  SnapshotFullRefresh.hpp  (+1 more)
euronext/: CMakeLists.txt
euronext/conversion/: Manager.hpp  Settings.hpp
euronext/packet/: Frame.hpp  Parser.hpp  Result.hpp  Settings.hpp
euronext/parquet/: Batch.hpp  Record.hpp  Writer.hpp
euronext/program/: Runner.hpp  Settings.hpp
euronext/protocol/: definitions.hpp
nasdaq/: CMakeLists.txt
nasdaq/conversion/: Manager.hpp
nasdaq/packet/: Parser.hpp  PcapFile.hpp
nasdaq/parquet/: Batch.hpp  Record.hpp  Writer.hpp
nasdaq/program/: Runner.hpp
siac/: CMakeLists.txt
siac/conversion/: Manager.hpp
siac/packet/: Parser.hpp  Result.hpp
siac/parquet/: Batch.hpp  Record.hpp  Writer.hpp
siac/program/: Runner.hpp
siac/protocol/: definitions.hpp
tests/: CMakeLists.txt  cme_tests.cpp  euronext_tests.cpp  iex_tests.cpp  nasdaq_tests.cpp  siac_tests.cpp
(+1182 files in other folders)
